Se completa codigo css y etiquetas correspondientes en html.

--- a/unidad4/index.html
+++ b/unidad4/index.html
@@ -8,23 +8,42 @@
 	<title>Currículum Vitae</title>
 </head>
 <body>
-	<h1>Homero Thompson</h1>
-	<img src="homer.jpg" alt="Foto de perfil">
-	<p>
-		<h3>Datos Personales</h3>
-		<ul><b>Edad:</b> 40</ul>
-		<ul><b>Residencia:</b> Lago del terror</ul>
-		<ul><b>Disponibilidad:</b> Full time, recientemente desempleado de la planta nuclear.</ul>
-	</p>
 
-	<p>
+	<div id="lateralA">
+		<div id="lateralB1"><img id="fotoPerfil" src="homer.jpg" alt="Foto de perfil"></div>
+		<div id="lateralB2">
+			<p class="parrafos">
+				<h2>Datos Personales</h2>
+				<ul><b>Edad:</b> 40</ul>
+				<ul><b>Residencia:</b> Lago del terror</ul>
+				<ul><b>Disponibilidad:</b> Full time, recientemente desempleado de la planta nuclear.</ul>
+			</p>
+		</div>
+	</div>
+
+	<div id="cuerpo">
+		<h1>Homero Thompson</h1>
+
+		<p class="parrafos">
 		<h3>Preferencias alimenticias</h3>
 		<ol>
 			<li>Cerveza</li>
 			<li>Chilli Hot Dogs</li>
 			<li>Maní</li>
 		</ol>
+
+		<a target="_blank" href="http://www.homerswebpage.com/">Mas información</a>
 	</p>
-	<a target="_blank" href="http://www.homerswebpage.com/">Mas información</a>
+	</div>
+	
+
+
+
+
+	
+	
+
+	
+	
 </body>
 </html>
